feat: add versioning to logger assemblies and package.

--- a/src/Appveyor.TestLogger.TestAdapter/Appveyor.TestLogger.TestAdapter.csproj
+++ b/src/Appveyor.TestLogger.TestAdapter/Appveyor.TestLogger.TestAdapter.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../../scripts/version.props" />
 
   <PropertyGroup>
     <TargetFramework>netstandard1.5</TargetFramework>
     <AssemblyName>Microsoft.VisualStudio.TestPlatform.Extension.Appveyor.TestAdapter</AssemblyName>
     <IsPackable>false</IsPackable>
+    <Version>$(PackageVersion)</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,5 +26,4 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="15.0.0" />
   </ItemGroup>
-
 </Project>
