--- a/src/package/Appveyor.TestLogger.nuspec
+++ b/src/package/Appveyor.TestLogger.nuspec
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>Appveyor.TestLogger</id>
     <version>$version$</version>
     <title>Appveyor.TestLogger</title>
-    <authors>codito,faizan2304,ngbrown,smadala</authors>
-    <owners>codito,faizan2304,smadala</owners>
+    <authors>codito,siphonophora,faizan2304,ngbrown,smadala</authors>
+    <owners>codito,siphonophora,faizan2304,smadala</owners>
     <projectUrl>https://github.com/spekt/appveyor.testlogger</projectUrl>
     <description>Logger for uploading test result in Appveyor when test is running with "dotnet test" or "dotnet vstest".</description>
     <licenseUrl>https://github.com/spekt/appveyor.testlogger/blob/master/LICENSE</licenseUrl>
+    <icon>packageIcon.png</icon>
   </metadata>
   <files>
     <file src="Microsoft.VisualStudio.TestPlatform.Extension.Appveyor.TestLogger.dll" target="build\_common\" />
     <file src="Microsoft.VisualStudio.TestPlatform.Extension.Appveyor.TestAdapter.dll" target="build\_common\" />
+    <file src="packageIcon.png" target="\" />
 
     <!-- Net Core -->
     <file src="Appveyor.TestLogger.props" target="build\netstandard1.0\" />
