--- a/src/package/package.csproj
+++ b/src/package/package.csproj
@@ -24,13 +24,14 @@
     <CopyOutputSymbolsToPublishDirectory>false</CopyOutputSymbolsToPublishDirectory>
 
     <!-- Disable warning that there are no source files. It is intentional. -->
-    <NoWarn>$(NoWarn);2008</NoWarn>
+    <NoWarn>$(NoWarn);2008;NU5127</NoWarn>
 
     <!-- Nuget pack configuration -->
     <NuspecFile>bin\$(Configuration)\$(TargetFramework)\Appveyor.TestLogger.nuspec</NuspecFile>
     <NuspecProperties>version=$(Version)</NuspecProperties>
     <IncludeContentInPack>false</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <PackageIcon>packageIcon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -47,6 +48,12 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="packageIcon.png" Pack="true" PackagePath="">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
   <!-- Prevent Csc from being called -->
   <Target Name="CoreCompile" />
 </Project>
